--- a/public/index.html
+++ b/public/index.html
@@ -7,20 +7,13 @@
   </head>
 
   <body>
+    <h1>Join Chat</h1>
 
-    <div class="messages">
-    </div>
-
-    <form id='message-form'>
-      <input type='text' name='message'/>
-      <input type='submit'/>
+    <form action='/chat.html'>
+      <label>Name</label>
+      <input type='text' name='name'/>
+      <input type='submit' value='Join Chat'/>
     </form>
-
-    <script src='/js/jquery-2.1.4.min.js'></script>
-    <script src='/js/socket.io-1.3.7.js'></script>
-    <script src='/js/QueryParams.js'></script>
-    <script src='/js/app.js'></script>
-    <script src='/js/moment.js'></script>
 
   </body>
 
