--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
     <form action='/chat.html'>
       <label>Name</label>
       <input type='text' name='name'/>
+
+      <label>Room</label>
+      <input type='text' name='room'/>
+
       <input type='submit' value='Join Chat'/>
     </form>
 
