--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Turing Slack</title>
+    <link rel='stylesheet' href='./css/bootstrap.min.css'>
   </head>
 
   <body>
