--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,15 @@
     <h1>Join Chat</h1>
 
     <form action='/chat.html'>
-      <label>Name</label>
-      <input type='text' name='name'/>
+      <div class='form-group'>
+        <label>Name</label>
+        <input type='text' name='name'class='form-control'/>
+      </div>
 
       <label>Room</label>
-      <input type='text' name='room'/>
+      <div class='form-group'>
+        <input type='text' name='room' class='form-control'/>
+      </div>
 
       <input type='submit' value='Join Chat'/>
     </form>
