--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,9 @@
         <input type='text' name='room' class='form-control'/>
       </div>
 
-      <input type='submit' value='Join Chat'/>
+      <div class='form-group'>
+        <input type='submit' value='Join Chat' class='btn btn-primary'/>
+      </div>
     </form>
 
   </body>
