--- a/public/index.html
+++ b/public/index.html
@@ -10,21 +10,27 @@
   <body>
     <h1>Join Chat</h1>
 
-    <form action='/chat.html'>
-      <div class='form-group'>
-        <label>Name</label>
-        <input type='text' name='name'class='form-control'/>
-      </div>
+    <div class='container'>
+      <div class='row'>
+        <div class='col-md-4 col-md-offset-4'>
+          <form action='/chat.html'>
+            <div class='form-group'>
+              <label>Name</label>
+              <input type='text' name='name'class='form-control'/>
+            </div>
 
-      <label>Room</label>
-      <div class='form-group'>
-        <input type='text' name='room' class='form-control'/>
-      </div>
+            <label>Room</label>
+            <div class='form-group'>
+              <input type='text' name='room' class='form-control'/>
+            </div>
 
-      <div class='form-group'>
-        <input type='submit' value='Join Chat' class='btn btn-primary'/>
+            <div class='form-group'>
+              <input type='submit' value='Join Chat' class='btn btn-primary'/>
+            </div>
+          </form>
+        </div>
       </div>
-    </form>
+    </div>
 
   </body>
 
