add styling: add user icon next to the name form field on the Join Chat page

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,12 @@
           <form action='/chat.html'>
             <div class='form-group'>
               <label>Name</label>
-              <input type='text' name='name'class='form-control'/>
+              <div class='input-group'>
+                <span class='input-group-addon'>
+                  <i class='glyphicon glyphicon-user'></i>
+                </span>
+                <input type='text' name='name'class='form-control'/>
+              </div>
             </div>
 
             <label>Room</label>
