--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,12 @@
 
             <label>Room</label>
             <div class='form-group'>
-              <input type='text' name='room' class='form-control'/>
+              <div class='input-group'>
+                <span class='input-group-addon'>
+                  <i class='glyphicon glyphicon-comment'></i>
+                </span>
+                <input type='text' name='room' class='form-control'/>
+              </div>
             </div>
 
             <div class='form-group'>
