--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
             </div>
 
             <div class='form-group'>
-              <input type='submit' value='Join Chat' class='btn btn-primary'/>
+              <input type='submit' value='Join Chat' class='btn btn-primary btn-block'/>
             </div>
           </form>
         </div>
