--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
     <div class='container'>
       <div class='row'>
-        <div class='col-md-4 col-md-offset-4'>
+        <div class='col-md-4 col-md-offset-4 well'>
 
           <h1>Join Chat</h1>
 
