--- a/public/index.html
+++ b/public/index.html
@@ -10,40 +10,42 @@
 
   <body>
 
-    <div class='container'>
-      <div class='row'>
-        <div class='col-md-4 col-md-offset-4 well'>
+    <div class='vertical-center'>
+      <div class='container'>
+        <div class='row'>
+          <div class='col-md-4 col-md-offset-4 well'>
 
-          <h1>Join Chat</h1>
+            <h1>Join Chat</h1>
 
-          <form action='/chat.html'>
-            <div class='form-group'>
-              <label>Name</label>
-              <div class='input-group'>
-                <span class='input-group-addon'>
-                  <i class='glyphicon glyphicon-user'></i>
-                </span>
-                <input type='text' name='name'class='form-control'/>
+            <form action='/chat.html'>
+              <div class='form-group'>
+                <label>Name</label>
+                <div class='input-group'>
+                  <span class='input-group-addon'>
+                    <i class='glyphicon glyphicon-user'></i>
+                  </span>
+                  <input type='text' name='name'class='form-control'/>
+                </div>
               </div>
-            </div>
 
-            <label>Room</label>
-            <div class='form-group'>
-              <div class='input-group'>
-                <span class='input-group-addon'>
-                  <i class='glyphicon glyphicon-comment'></i>
-                </span>
-                <input type='text' name='room' class='form-control'/>
+              <label>Room</label>
+              <div class='form-group'>
+                <div class='input-group'>
+                  <span class='input-group-addon'>
+                    <i class='glyphicon glyphicon-comment'></i>
+                  </span>
+                  <input type='text' name='room' class='form-control'/>
+                </div>
               </div>
-            </div>
 
-            <div class='form-group'>
-              <input type='submit' value='Join Chat' class='btn btn-primary btn-block'/>
-            </div>
-          </form>
+              <div class='form-group'>
+                <input type='submit' value='Join Chat' class='btn btn-primary btn-block'/>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
-    </div>
+      </div>
 
   </body>
 
