--- a/public/chat.html
+++ b/public/chat.html
@@ -4,6 +4,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Turing Slack</title>
+    <link rel='stylesheet' href='./css/bootstrap.min.css'>
+    <link rel='stylesheet' href='./css/styles.css'>
   </head>
 
   <body>
