--- a/public/chat.html
+++ b/public/chat.html
@@ -9,17 +9,24 @@
   </head>
 
   <body>
-    <a href='/index.html'>Exit</a>
+    <div class='container'>
+      <div class='row'>
+        <div class='col-md-4 col-md-offset-4 well'>
+          <a href='/index.html'>Exit</a>
 
-    <h1 class='room-title'></h1>
+          <h1 class='room-title'></h1>
 
-    <div class="messages">
+          <div class="messages">
+          </div>
+
+          <form id='message-form'>
+            <input type='text' name='message'/>
+            <input type='submit'/>
+          </form>
+
+        </div>
+      </div>
     </div>
-
-    <form id='message-form'>
-      <input type='text' name='message'/>
-      <input type='submit'/>
-    </form>
 
     <script src='/js/jquery-2.1.4.min.js'></script>
     <script src='/js/socket.io-1.3.7.js'></script>
