--- a/public/chat.html
+++ b/public/chat.html
@@ -20,7 +20,15 @@
           </div>
 
           <form id='message-form'>
-            <input type='text' name='message'/>
+            <div class='form-group'>
+              <div class='input-group'>
+                <span class='input-group-addon'>
+                  <i class='glyphicon glyphicon-comment'></i>
+                </span>
+                <input type='text' name='message' class='form-control'/>
+              </div>
+            </div>
+
             <input type='submit'/>
           </form>
 
