--- a/public/chat.html
+++ b/public/chat.html
@@ -29,7 +29,9 @@
               </div>
             </div>
 
-            <input type='submit'/>
+            <div class='form-group'>
+              <input type='submit' class='btn btn-default btn-block'/>
+            </div>
           </form>
 
         </div>
