add styling: center header on Chat page

--- a/public/chat.html
+++ b/public/chat.html
@@ -14,10 +14,10 @@
         <div class='col-md-6 col-md-offset-3 well'>
           <a href='/index.html'>Exit</a>
 
-          <h1 class='room-title'></h1>
+          <h1 class='room-title text-center'></h1>
 
-          <div class="messages">
-          </div>
+          <ul class="messages list-group">
+          </ul>
 
           <form id='message-form'>
             <div class='form-group'>
