--- a/public/chat.html
+++ b/public/chat.html
@@ -10,7 +10,7 @@
 
   <body>
     <div class='container'>
-      <div class='row'>
+      <div class='row chat-block'>
         <div class='col-md-6 col-md-offset-3 well'>
           <a href='/index.html'>Exit</a>
 
