work in progress: almost there, but having trouble with the jquery configuration

--- a/public/chat.html
+++ b/public/chat.html
@@ -34,6 +34,10 @@
             </div>
           </form>
 
+          <h1 class='users text-center'>Users</h1>
+          <ul class="user-list list-group">
+          </ul>
+
         </div>
       </div>
     </div>
